--- a/112208077_Bonus_HW.html
+++ b/112208077_Bonus_HW.html
@@ -32,7 +32,7 @@
 
     <div class="form-group">
       <label for="textarea">textarea</label>
-      <textarea id="textarea"></textarea>
+      <textarea id="textarea" placeholder="make it not resizable"></textarea>
     </div>
 
     <div class="form-group">
