--- a/112208077_Bonus_HW.html
+++ b/112208077_Bonus_HW.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type = "text/css" href="112208077_Bonus_HW.css">
 </head>
 <body>
-  <h1>Bonus HW</h1>
+  <p>Bonus HW</p>
   <form>
     <div class="form-group">
       <label for="input1">input1</label>
